k8s/ingress-domain.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: 'nginx'
  name: ingress-service-dev
  namespace: default
spec:
  tls:
    - hosts:
        - testapp.local
      secretName: tls-testapp-dev
  rules:
    - host: testapp.local
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service-dev
              servicePort: 3000
